ADD:Calculator-Unit-Test

--- a/02-Unit-Test/explainText/02-명령어.md
+++ b/02-Unit-Test/explainText/02-명령어.md
@@ -1,3 +1,5 @@
+# jest 명령어
+
 ```json
 "scripts": {
   // **** git commit되기 이전 것만 테스트코드로 바라보기
@@ -7,3 +9,8 @@
   "test": "jest --watchAll"
 },
 ```
+
+# 테스트 명령어 설명
+
+> @see 모든 함수들 https://jestjs.io/docs/expect
+> @see 많이 쓰이는 일반 Matchers https://jestjs.io/docs/using-matchers
