ADD:02-unit-test-에러-테스트

--- a/02-Unit-Test/explainText/02-명령어.md
+++ b/02-Unit-Test/explainText/02-명령어.md
@@ -10,6 +10,11 @@
 },
 ```
 
+```bash
+# jest실행할 떄 coverage도 보는 법
+$ jest --coverage
+```
+
 # 테스트 명령어 설명
 
 > @see 모든 함수들 https://jestjs.io/docs/expect
